feat: move patterns to class